--- a/decisioning_dashboard/package.json
+++ b/decisioning_dashboard/package.json
@@ -6,19 +6,22 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "constants-browserify": "^1.0.0",
     "crypto-browserify": "^3.12.0",
     "mssql": "^11.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
     "react-scripts": "^5.0.1",
+    "stream-browserify": "^3.0.0",
+    "timers-browserify": "^2.0.12",
     "web-streams-polyfill": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -40,6 +43,11 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.24.7"
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
+    "react-app-rewired": "^2.2.1"
+  },
+  "browser": {
+    "crypto": false,
+    "stream": false
   }
 }
