--- a/decisioning_dashboard/package.json
+++ b/decisioning_dashboard/package.json
@@ -21,9 +21,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently \"react-app-rewired start\" \"npm run server\" ",
-    "client": "cd server && npm start",
-    "server": "node ./server/index.js",
+    "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
