--- a/decisioning_dashboard/package.json
+++ b/decisioning_dashboard/package.json
@@ -10,6 +10,8 @@
     "constants-browserify": "^1.0.0",
     "crypto-browserify": "^3.12.0",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
+    "js-yaml": "^4.1.0",
     "mssql": "^11.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -45,8 +47,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "react-app-rewired": "^2.2.1"
   },
   "browser": {
