--- a/decisioning_dashboard/package.json
+++ b/decisioning_dashboard/package.json
@@ -9,6 +9,7 @@
     "concurrently": "^8.2.2",
     "constants-browserify": "^1.0.0",
     "crypto-browserify": "^3.12.0",
+    "csv-parser": "^3.0.0",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "js-yaml": "^4.1.0",
