--- a/decisioning_dashboard/package.json
+++ b/decisioning_dashboard/package.json
@@ -10,6 +10,7 @@
     "constants-browserify": "^1.0.0",
     "crypto-browserify": "^3.12.0",
     "csv-parser": "^3.0.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "js-yaml": "^4.1.0",
