--- a/decisioning_dashboard/.env.development
+++ b/decisioning_dashboard/.env.development
@@ -1,3 +1,3 @@
-REACT_APP_RECENT_APPS_URL=http://localhost:3001/test
+REACT_APP_RECENT_APPS_URL=http://localhost:3001/db
 REACT_APP_DELPHI_DATA_URL=http://localhost:3001/delphi-data
 REACT_APP_SEARCHDEF_URL=http://localhost:3001/lookup-def
